_tmp/ch5-5_wrong_choices.txt
python :   File "<string>", line 23
発生場所 行:1 文字:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 23:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'  {c[" choice_id\]}:
                 ^
SyntaxError: unterminated string literal (detected at line 23)
